change title and heading

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <ul id="navbar__list"></ul>
     </nav>
     <div class="heading">
-      <h1>Alex and Mariah's Family Animal Shelter FUCK</h1>
+      <h1>Alex and Mariah's Family Animal Shelter</h1>
     </div>
     <div class="about" id='about'>
       <h2>About Us</h2>
