--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
 <body>
   <div class="main">
     <nav class="navbar_menu">
-      <ul id="navbar__list"></ul>
+      <ul id="navbar__list">
+        <li>About</li>
+        <li>Dogs</li>
+        <li>Cats</li>
+        <li>Exotic Animals</li>
+        <li>Contact</li>
+      </ul>
     </nav>
     <div class="heading">
       <h1>Alex and Mariah's Family Animal Shelter</h1>
