--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
   <div class="main">
     <nav class="navbar_menu">
       <ul id="navbar__list">
-        <li>About</li>
-        <li>Dogs</li>
-        <li>Cats</li>
-        <li>Exotic Animals</li>
-        <li>Contact</li>
+          <li><button type="button" class="button"> <img src="alex-sun-bear.jpg" id="alex" alt=""> </button></li>
+        <li><button type="button" class="button"> <a href="#about">About</a> </button></li>
+          <li><button type="button" class="button"> <a href="#dogs">Dogs</a> </button></li>
+          <li><button type="button" class="button"> <a href="#cats">Cats</a> </button></li>
+        <li><button type="button" class="button"> <a href="#exotic">Exotic</a> </button></li>
+          <li><button type="button" class="button"> <a href="#contact">Contact</a> </button></li>
       </ul>
     </nav>
     <div class="heading">
